# omnisim-engine-cpp

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat
app/: main.cpp  projectile_2d_main.cpp
engine/include/engine/: engine_loop.h  time_system.h
engine/src/: engine_loop.cpp
math/include/math/: vector2.h
math/src/: vector2.cpp
simulation/include/simulation/: i_simulation.h  simulation_factory.h
simulation/projectile/include/projectile/: i_projectile.h  projectile_simulation.h  projectile_state.h  terrain_profile.h
simulation/projectile/src/: projectile_simulation.cpp  terrain_profile.cpp
simulation/src/: simulation_factory.cpp
